k8s/namespaces/dump/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dump
  labels:
    app.kubernetes.io/name: dump
    app.kubernetes.io/part-of: dump
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: dump
  labels:
    app.kubernetes.io/name: dump
    app.kubernetes.io/part-of: dump
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
